Update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
       name="description"
-      content="Empowering Asia-Pacific AI Leaders for the World - A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
+      content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
     />
 
     <!-- Open Graph / Facebook -->
@@ -21,9 +21,7 @@
     <meta property="og:url" content="https://astar.newturing.ai/" />
     <meta property="og:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
-      property="og:description"
-      content="Empowering Asia-Pacific AI Leaders for the World
-      A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
+      property="og:description" content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
     />
     <meta property="og:image" content="thumb.png?v=4" />
 
@@ -33,8 +31,7 @@
     <meta property="twitter:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
       property="twitter:description"
-      content="Empowering Asia-Pacific AI Leaders for the World
-      A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
+      content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
     />
     <meta property="twitter:image" content="thumb.png?v=4" />
     
