--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>AStar Bootcamp - NTI Global Talent Program 2025</title>
-    <meta name="title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
+    <title>GStar Bootcamp - NTI Global Talent Program 2025</title>
+    <meta name="title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
       name="description"
       content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
@@ -18,8 +18,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://astar.newturing.ai/" />
-    <meta property="og:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
+    <meta property="og:url" content="https://GStar.newturing.ai/" />
+    <meta property="og:title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
       property="og:description" content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
     />
@@ -27,8 +27,8 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://astar.newturing.ai/" />
-    <meta property="twitter:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
+    <meta property="twitter:url" content="https://GStar.newturing.ai/" />
+    <meta property="twitter:title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
     <meta
       property="twitter:description"
       content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
