--- a/public/index.html
+++ b/public/index.html
@@ -6,34 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>AStar Bootcamp - NTI Global Talent Program 2025</title>
-    <meta name="title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
-    <meta
-      name="description"
-      content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
-    />
-
+    <title>GStar Bootcamp - NTI Global Talent Program 2025</title>
+    <meta name="title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
+    <meta name="description" content="Empowering future AI leaders in Asia-Pacific and beyond. A 12-week, fully online accelerator that equips emerging AI talents with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"    />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://astar.newturing.ai/" />
-    <meta property="og:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
-    <meta
-      property="og:description" content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
-    />
-    <meta property="og:image" content="thumb.png?v=4" />
-
+    <meta property="og:url" content="https://gstar.newturing.ai/" />
+    <meta property="og:title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
+    <meta property="og:description" content="Empowering future AI leaders in Asia-Pacific and beyond. A 12-week, fully online accelerator that equips emerging AI talents with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"    />
+    <meta property="og:image" content="https://gstar.newturing.ai/thumb.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="GStar Bootcamp" />
+    <meta property="og:locale" content="en_US" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://astar.newturing.ai/" />
-    <meta property="twitter:title" content="AStar Bootcamp - NTI Global Talent Program 2025" />
-    <meta
-      property="twitter:description"
-      content="Empowering Asia-Pacific AI Leaders for the World. A 12-week, fully online accelerator that equips emerging AI engineers with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"
-    />
-    <meta property="twitter:image" content="thumb.png?v=4" />
+    <meta property="twitter:url" content="https://gstar.newturing.ai/" />
+    <meta property="twitter:title" content="GStar Bootcamp - NTI Global Talent Program 2025" />
+    <meta property="twitter:description" content="Empowering future AI leaders in Asia-Pacific and beyond. A 12-week, fully online accelerator that equips emerging AI talents with cutting-edge technical expertise and leadership skills - culminating in a showcase at the GenAI Summit 2025"    />
+    <meta property="twitter:image" content="https://gstar.newturing.ai/thumb.png" />
+    <meta property="twitter:site" content="@newturing_ai" />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
